# NeuralDocumentClassification

./: .gitignore  Copy_of_chapter_3_llm.ipynb  README.md  chapter_1_vision.ipynb  chapter_2_text.ipynb  chapter_3_llm.ipynb  dataset_description.json  pyproject.toml  secrets.json  skeleton.ipynb
src/: download_dataset.py  make_local_dataset.py
