[project]
name = "neuraldocumentclassification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.7",
    "datasets>=3.0.0",
    "gdown>=5.2.0",
    "ipython>=8.27.0",
    "pillow>=10.4.0",
    "polars>=1.8.1",
    "pydantic>=2.9.2",
    "requests>=2.32.3",
    "tqdm>=4.66.5",
    "types-requests>=2.32.0.20240914",
    "types-tqdm>=4.66.0.20240417",
]


[tool.ruff.lint]
select = ["C", "E", "F", "W"]
unfixable = ["F401"]
